# ErgoMouse

./: ARCHITECTURE.md  InputIntent.kt  PalmRejectionFilter.kt  README.md  injector.rs  packet.rs
android-app/: local.properties  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/ergomouse/: MainActivity.kt
android-app/app/src/main/java/com/ergomouse/input/: GestureRecognizer.kt  PacketCodec.kt
android-app/app/src/main/java/com/ergomouse/ui/connection/: ConnectionScreen.kt
android-app/app/src/main/java/com/ergomouse/ui/home/: HomeScreen.kt
android-app/app/src/main/java/com/ergomouse/ui/navigation/: AppNavigation.kt
android-app/app/src/main/java/com/ergomouse/ui/pairing/: ConnectionScreen.kt
android-app/app/src/main/java/com/ergomouse/ui/theme/: Color.kt  Theme.kt
android-app/app/src/main/java/com/ergomouse/ui/trackpad/: ErgomouseViewModel.kt  TrackpadScreen.kt
android-app/app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_foreground.xml
android-app/app/src/main/res/values/: themes.xml
desktop-receiver/: Cargo.toml
desktop-receiver/src/: main.rs
desktop-receiver/src/hid/: injector.rs
desktop-receiver/src/platform/windows/: mod.rs
protocol/schema/: packet.proto
