[package]
name = "desktop-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0.56"
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation"] }
serialport = "4.3.0"

[build-dependencies]
winres = "0.1.12"
